--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body ::-webkit-scrollbar {
+  display: none !important;
+}
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
